# cimcp

./: Makefile.in  README  configure  configure.ac
lib/: Makefile.in
src/: LICENSE  Makefile.am  Makefile.in  README  RELEASE  cimcp_Fconvex.cpp  cimcp_Fmonotone.cpp  cimcp_accuracy.cpp  cimcp_accuracyRel.cpp  cimcp_chi2.cpp  cimcp_convexhull.cpp  cimcp_fisher.cpp  cimcp_gini.cpp  cimcp_infgain.cpp  cimcp_laplace.cpp  constraint_Fconvex.cpp  constraint_Fmonotone.cpp  constraint_convexhull.cpp  struct_itemset.cpp  wrap_hull.py
src/emulator/: Makefile.am  Makefile.in  README  constraint_Fconvex_emulator.cpp  emulator_1support.cpp  emulator_1support_topk.cpp  emulator_2support.cpp  emulator_2support_topk.cpp
